// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fade can accept custom styles 1`] = `
<div
  className={undefined}
  style={
    Object {
      "background": "black",
      "opacity": 0,
      "transitionDelay": "0ms",
      "transitionDuration": "500ms",
      "transitionProperty": "opacity",
      "transitionTimingFunction": "ease",
      "willChange": "opacity",
    }
  }
/>
`;

exports[`Fade renders 1`] = `
<div
  className={undefined}
  style={
    Object {
      "opacity": 0,
      "transitionDelay": "0ms",
      "transitionDuration": "500ms",
      "transitionProperty": "opacity",
      "transitionTimingFunction": "ease",
      "willChange": "opacity",
    }
  }
/>
`;

exports[`Fade sets transitionDelay with delay prop 1`] = `
<div
  className={undefined}
  style={
    Object {
      "opacity": 0,
      "transitionDelay": "1000ms",
      "transitionDuration": "500ms",
      "transitionProperty": "opacity",
      "transitionTimingFunction": "ease",
      "willChange": "opacity",
    }
  }
/>
`;

exports[`Fade sets transitionDuration with duration prop 1`] = `
<div
  className={undefined}
  style={
    Object {
      "opacity": 0,
      "transitionDelay": "0ms",
      "transitionDuration": "1000ms",
      "transitionProperty": "opacity",
      "transitionTimingFunction": "ease",
      "willChange": "opacity",
    }
  }
/>
`;

exports[`Fade sets transitionTimingFunction with timingFn prop 1`] = `
<div
  className={undefined}
  style={
    Object {
      "opacity": 0,
      "transitionDelay": "0ms",
      "transitionDuration": "500ms",
      "transitionProperty": "opacity",
      "transitionTimingFunction": "ease-in-out",
      "willChange": "opacity",
    }
  }
/>
`;
